styles.css
* {
    /* background: url("images/rock-paper-scissors.jpg") no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover; */
    /* background-size: cover;
    color:aliceblue;*/
    text-align: center;
}



h1 {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
  }

#container, #score-container {
    display: flex;
}

h2 {
    flex: 1;
    justify-content: space-evenly;
}

#totalWon, #totalLost {
    flex: 1;
    justify-content: space-evenly;
}

#reset {
    width: 12%;
    height: 50px;
    margin-top: 400px;
}

